bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/Padel_Game__c.object-meta.xml
<CustomObject>
    <label>Padel Game</label>
    <pluralLabel>Padel Games</pluralLabel>
    <nameField>
        <displayFormat>GAME-{0000}</displayFormat>
        <label>Game Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>