bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <label>Court</label>
    <referenceTo>Padel_Court__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Padel_Games</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>