bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Court_Name__c.field-meta.xml
<CustomField>
    <fullName>Court_Name__c</fullName>
    <label>Court Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kort 1</fullName>
            </value>
            <value>
                <fullName>Kort 2</fullName>
            </value>
            <value>
                <fullName>Kort 3</fullName>
            </value>
            <value>
                <fullName>Kort 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>