bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Creator_Email__c.field-meta.xml
<CustomField>
    <fullName>Creator_Email__c</fullName>
    <label>Creator Email</label>
    <type>Email</type>
</CustomField>