bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Current_Players__c.field-meta.xml
<CustomField>
    <fullName>Current_Players__c</fullName>
    <label>Current Players</label>
    <summaryForeignKey>Padel_Game_Registration__c.Game__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>