bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_Week__c</fullName>
    <label>Day of Week</label>
    <formula>CASE(MOD(Game_Date__c - DATE(1900, 1, 7), 7),
    0, "Niedziela",
    1, "Poniedziałek",
    2, "Wtorek",
    3, "Środa",
    4, "Czwartek",
    5, "Piątek",
    6, "Sobota",
    "Błąd"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>