bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration (hours)</label>
    <description>Duration of the game in hours (e.g., 1.5 for 1.5 hours)</description>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>