bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Game_Date__c.field-meta.xml
<CustomField>
    <fullName>Game_Date__c</fullName>
    <label>Game Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>