bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Game_Time__c.field-meta.xml
<CustomField>
    <fullName>Game_Time__c</fullName>
    <label>Game Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>