bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Max_Players__c.field-meta.xml
<CustomField>
    <fullName>Max_Players__c</fullName>
    <label>Max Players</label>
    <defaultValue>4</defaultValue>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>