bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Organizer__c.field-meta.xml
<CustomField>
    <fullName>Organizer__c</fullName>
    <label>Organizer</label>
    <referenceTo>Padel_Player__c</referenceTo>
    <relationshipLabel>Organized Games</relationshipLabel>
    <relationshipName>Organized_Games</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>