bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Price_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Person__c</fullName>
    <label>Price Per Person</label>
    <formula>Total_Price__c / Max_Players__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>