bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Share_Link__c.field-meta.xml
<CustomField>
    <fullName>Share_Link__c</fullName>
    <label>Share Link</label>
    <formula>"https://yourorg.my.site.com/padelbooking/game/" &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>