bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dostępna</fullName>
                <default>true</default>
                <label>Dostępna</label>
            </value>
            <value>
                <fullName>Zarezerwowana</fullName>
            </value>
            <value>
                <fullName>Pełna</fullName>
            </value>
            <value>
                <fullName>Anulowana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>