bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/validationRules/Court_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Court_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Court__c)</errorConditionFormula>
    <errorDisplayField>Court__c</errorDisplayField>
    <errorMessage>Kort jest wymagany</errorMessage>
</ValidationRule>