bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/validationRules/Game_Date_Must_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Game_Date_Must_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Game_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Game_Date__c</errorDisplayField>
    <errorMessage>Data gry musi być w przyszłości</errorMessage>
</ValidationRule>