bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/validationRules/Max_Players_Must_Be_4.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Players_Must_Be_4</fullName>
    <active>false</active>
    <errorConditionFormula>Max_Players__c != 4</errorConditionFormula>
    <errorDisplayField>Max_Players__c</errorDisplayField>
    <errorMessage>Liczba graczy musi wynosić dokładnie 4 (standard padla)</errorMessage>
</ValidationRule>