bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/validationRules/Organizer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Organizer_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Organizer__c)</errorConditionFormula>
    <errorDisplayField>Organizer__c</errorDisplayField>
    <errorMessage>Organizator jest wymagany</errorMessage>
</ValidationRule>