bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game__c/validationRules/Total_Price_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Price_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Price__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Total_Price__c</errorDisplayField>
    <errorMessage>Cena musi być większa niż 0</errorMessage>
</ValidationRule>